# Toolbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  DFT.m  DFT.py  Error.h  Error.m  FileManager.h  FileManange.h  HardDetection.m  MatOps.py  README.md  init.m
Examples/Test_Error/: Test_Error.m
Examples/Test_FileManager/: Test_FileManager.cpp
Samples/Test_Error/: Test_Error.cpp
Tests/: test_HardDetection.m
Tests/Test_Error/: Test_Error  Test_Error.cpp
Tests/Test_FileManager/: Test_FileManager  Test_FileManager_Linux.cpp  Test_FileManager_Linux.sh
Tests/Test_FileManager/Test_FileManager_Win/: Test_FileManager_Win.sln  Test_FileManager_Win.vcxproj  test.cpp
